<resources>
    <string name="app_name">buttonradio</string>
    <string name="order">Order:</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="note">Note</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="delivery">Delivery</string>
    <string name="same_day_service">Same day service</string>
    <string name="next_day">Next day</string>
    <string name="cake">Cake</string>
    <string name="donuts">donut</string>
    <string name="ice_cream">ice_cream</string>
    <string name="donut_order">Order donut</string>
    <string name="ice_cream_order">Order ice cream</string>
    <string name="cake_order">Order cake</string>
    <string name="order1">Order</string>
    <string name="status">status</string>
    <string name="contact">Contact</string>
    <string name="action_order_message">Orderrrrr</string>
    <string name="action_status_message">Statussss</string>
    <string name="action_favourite_message">favouriteeee</string>
    <string name="action_contact_message">Contactttt</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>


</resources>